--- a/leetcode/2. Matrix 01.md
+++ b/leetcode/2. Matrix 01.md
@@ -1,6 +1,6 @@
 ### 0 1 Matrix
 
-```java
+```cpp
 int dir[4][2] = {{0,1},{0,-1}, {1,0}, {-1,0}};
     vector<vector<int>> updateMatrix(vector<vector<int>>& mat) {
         int m = mat.size();
