--- a/leetcode/10. Combination Sum.md
+++ b/leetcode/10. Combination Sum.md
@@ -1,4 +1,4 @@
-
+### Combination Sum
 ```cpp
 
    void solve(int target, vector<int>& candidates, vector<vector<int>> &ans, vector<int> &temp, int idx){
