--- a/leetcode/7. Coin Change.md
+++ b/leetcode/7. Coin Change.md
@@ -1,7 +1,25 @@
 ## Coin change
 
+https://leetcode.com/problems/coin-change/submissions/
+
+You are given an integer array coins representing coins of different denominations and an integer amount representing a total amount of money.
+
+Return the fewest number of coins that you need to make up that amount. If that amount of money cannot be made up by any combination of the coins, return -1.
+
+You may assume that you have an infinite number of each kind of coin.
+
+ 
+
+Example 1:
+
+Input: coins = [1,2,5], amount = 11
+Output: 3
+Explanation: 11 = 5 + 5 + 1
+
 * Solution 1
-```cpp
+
+
+```java
 
     int solve(vector<int>& coins, int amount, vector<int> &dp){
         if(amount == 0) return 0;
@@ -28,6 +46,8 @@
 
 
 * Solution 2
+
+
 ```cpp
 
    int solve(vector<int>& coins, int idx, int amount, vector<vector<int>> &dp){
